Refactored Actor model. Moved it's manager methods to action layer (Methods were referencing other models. Didn't belong in manager). Also, Hyperlinked the actors and directors in MovieDetails.

--- a/MovieDB/templates/movie_detail.html
+++ b/MovieDB/templates/movie_detail.html
@@ -45,14 +45,14 @@
                         <dt>Directors</dt>
                         {% if directors %}
                             {% for director in directors %}
-                                <dd>{{ director.get_full_name }}</dd>
+                                <dd><a href="{% url 'DirectorDetail' director.did.id %}">{{ director.did.get_full_name }}</a></dd>
                             {% endfor %}
                         {% else %}
                             <dd>N/A</dd>
                         {% endif %}
                         <dt>Actors</dt>
                         {% for actor in actors %}
-                            <dd>{{ actor.get_full_name }}
+                            <dd><a href="{% url 'ActorDetail' actor.aid.id %}">{{ actor.aid.get_full_name }}</a> as {{ actor.role }}</dd>
                         {% endfor %}
                     </dl>
                 </div>
