--- a/MovieDB/templates/director_detail.html
+++ b/MovieDB/templates/director_detail.html
@@ -1,6 +1,45 @@
 {% extends 'base.html' %}
+{% load staticfiles %}
 {% block main_block %}
     <div class="container">
         <h1>{{ page_header }}</h1>
+
+        <div class="panel panel-default text-left">
+            <div class="panel-heading">
+                <h2 class="">{{ director.get_full_name }}</h2>
+            </div>
+            <div class="list-group">
+                <div class="list-group-item">
+                    <div class="media">
+                        <div class="media-left media-top">
+                            <img class="media-object img-circle" src="{% static 'img/default_person.png' %}">
+                        </div>
+                        <div class="media-body">
+{#                            <h3 class="list-group-item-heading text-primary text-capitalize">Details</h3>#}
+                            <dl class="dl-horizontal">
+                                <dt>DOB</dt>
+                                <dd>{{ director.dob}}</dd>
+                                {% if director.dod %}
+                                <dt>DOD</dt>
+                                <dd>{{ director.dod }}</dd>
+                                {% endif %}
+                            </dl>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="list-group-item">
+                    <h3 class="list-group-item-heading text-primary text-capitalize ">Movies</h3>
+                    <div class="list-group">
+                        {% for movie in movies %}
+                            <a class="list-group-item" href="{% url 'MovieDetail' movie.mid.id %}">
+                                {{ movie.mid.title }} ({{ movie.mid.year }})
+                            </a>
+                        {% endfor %}
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </div>
 {% endblock %}
