Minor display changes in template and query ordering for details pages

--- a/MovieDB/templates/index.html
+++ b/MovieDB/templates/index.html
@@ -14,7 +14,7 @@
             <button type="button" class="close" data-dismiss="alert"
                     aria-label="Close"><span aria-hidden="true">&times;</span>
             </button>
-            <strong>What Works?</strong> Navigation, Search, Browse pages
+            <strong>What Works?</strong> Navigation, Search, Browse pages, Details pages
         </div>
 
         <div class="alert alert-danger alert-dismissable fade in" role="alert">
