--- a/MovieDB/templates/actor_detail.html
+++ b/MovieDB/templates/actor_detail.html
@@ -6,7 +6,7 @@
 
         <div class="panel panel-default text-left">
             <div class="panel-heading">
-                <h2 class="">{{ actor.get_full_name }}</h2>
+                <h2 class="text-primary">{{ actor.get_full_name }}</h2>
             </div>
             <div class="list-group">
                 <div class="list-group-item">
@@ -31,7 +31,7 @@
                 </div>
 
                 <div class="list-group-item">
-                    <h3 class="list-group-item-heading text-primary text-capitalize ">Movies</h3>
+                    <h3 class="list-group-item-heading text-capitalize ">Movies</h3>
                     <div class="list-group">
                         {% for movie in movies %}
                             <a class="list-group-item" href="{% url 'MovieDetail' movie.mid.id %}">
