--- a/MovieDB/templates/movie_detail.html
+++ b/MovieDB/templates/movie_detail.html
@@ -9,91 +9,146 @@
                 <h2 class="text-primary">{{ movie.title }}</h2>
             </div>
             <div class="list-group">
+                {# Movie Details #}
                 <div class="list-group-item">
                     <div class="media">
                         <div class="media-left media-top">
                             <img class="media-object" src="{% static 'img/default_movie.png' %}">
                         </div>
                         <div class="media-body">
-                            <dl class="dl-horizontal">
-                                <dt>Year</dt>
-                                <dd>{{ movie.year }}</dd>
-                                <dt>Company</dt>
-                                <dd>{{ movie.company }}</dd>
-                                <dt>MPAA Rating</dt>
-                                <dd>{{ movie.rating }}</dd>
+{#                        <div class="bs-callout bs-callout-primary">#}
+                            <Table class="table table-condensed" border="0">
+                                <tr>
+                                    <td><h4><strong>Year</strong></h4></td>
+                                    <td><h4>{{ movie.year }}</h4></td>
+                                </tr>
+                                <tr>
+                                    <td><h4><strong>Company</strong></h4></td>
+                                    <td><h4>{{ movie.company }}</h4></td>
+                                </tr>
+                                <tr>
+                                    <td><h4><strong>MPAA Rating</strong></h4></td>
+                                    <td><h4>{{ movie.rating }}</h4></td>
+                                </tr>
+                                <tr>
+                                    <td><h4><strong>Average User Rating</strong></h4></td>
+                                    {% if avg_user_rating %}
+                                        <td><h4>{{ avg_user_rating }}</h4></td>
+                                    {% else %}
+                                        <td><h4><em>This movie has not yet been reviewed</em></h4></td>
+                                    {% endif %}
+                                </tr>
+                                <tr>
+                                    <td><h4><strong>Genres</strong></h4></td>
+                                    {% if genres %}
+                                        {% for genre in genres %}
+                                            <td><h4>{{ genre }}</h4></td>
+                                        {% endfor %}
+                                    {% else %}
+                                        <td><h4><em>No genres to display</em></h4></td>
+                                    {% endif %}
+                                </tr>
+                            </Table>
+{#                            <dl class="dl-horizontal">#}
+{#                                <dt>Year</dt>#}
+{#                                <dd>{{ movie.year }}</dd>#}
+{#                                <dt>Company</dt>#}
+{#                                <dd>{{ movie.company }}</dd>#}
+{#                                <dt>MPAA Rating</dt>#}
+{#                                <dd>{{ movie.rating }}</dd>#}
 {#                                <dd><img src="{% static 'img/mpaa-icon_g.svg.png' %}" width="18"></dd>#}
-                                <dt>Genres</dt>
-                                {% for genre in genres %}
-                                    <dd>{{ genre }}</dd>
-                                {% endfor %}
-                                <dt>Avg. User Rating</dt>
-                                {% if avg_user_rating %}
-                                    <dd>{{ avg_user_rating }}</dd>
-                                {% else %}
-                                    <dd>This movie has not yet been reviewed
-                                    </dd>
-                                {% endif %}
-                            </dl>
+{#                                <dt>Genres</dt>#}
+{#                                {% for genre in genres %}#}
+{#                                    <dd>{{ genre }}</dd>#}
+{#                                {% endfor %}#}
+{#                                <dt>Avg. User Rating</dt>#}
+{#                                {% if avg_user_rating %}#}
+{#                                    <dd>{{ avg_user_rating }}</dd>#}
+{#                                {% else %}#}
+{#                                    <dd>This movie has not yet been reviewed#}
+{#                                    </dd>#}
+{#                                {% endif %}#}
+{#                            </dl>#}
+{#                        </div>#}
                         </div>
                     </div>
                 </div>
-
+                {# Directors #}
                 <div class="list-group-item">
                     <h3 class="list-group-item-heading text-capitalize">Directors</h3>
                     {% if directors %}
-                        {% for director in directors %}
-                            <a href="{% url 'DirectorDetail' director.did.id %}">{{ director.did.get_full_name }}</a>
-                        {% endfor %}
+                        <table class="table table-condensed">
+{#                            <th class="text-primary">Name</th>#}
+                            {% for director in directors %}
+                                <tr>
+                                    <td>
+                                        <img class="img-circle" src="{% static 'img/default_person.png' %}" width="24">
+                                        <a class="text-primary text-capitalize" href="{% url 'DirectorDetail' director.did.id %}">
+                                            {{ director.did.get_full_name }}
+                                        </a>
+                                    </td>
+                                </tr>
+                            {% endfor %}
+                        </table>
+{#                        {% for director in directors %}#}
+{#                            <a href="{% url 'DirectorDetail' director.did.id %}">{{ director.did.get_full_name }}</a>#}
+{#                        {% endfor %}#}
                     {% else %}
                         <h4 class="text-muted"><em>No directors to display</em></h4>
                     {% endif %}
                 </div>
-
+                {# Actors #}
                 <div class="list-group-item">
                     <h3 class="list-group-item-heading text-capitalize">Cast</h3>
                     {% if actors %}
-                        {% for actor in actors %}
-                            <a href="{% url 'ActorDetail' actor.aid.id %}">{{ actor.aid.get_full_name }}</a> as {{ actor.role }}
-                            </br>
-                        {% endfor %}
+                        <table class="table table-striped table-condensed">
+                            <th class="text-primary">Actor</th>
+                            <th class="text-primary">Role</th>
+                            {% for actor in actors %}
+                                <tr>
+                                    <td>
+                                        <img class="img-circle" src="{% static 'img/default_person.png' %}" width="24">
+                                        <a class="text-primary text-capitalize" href="{% url 'ActorDetail' actor.aid.id %}">
+                                            {{ actor.aid.get_full_name }}
+                                        </a>
+                                    </td>
+                                    <td>
+                                        {{ actor.role }}
+                                    </td>
+                                </tr>
+                            {% endfor %}
+                        </table>
                     {% else %}
                         <h4 class="text-muted"><em>No cast to display</em></h4>
                     {% endif %}
                 </div>
-
+                {# Reviews #}
                 <div class="list-group-item">
                     <h3 class="list-group-item-heading text-capitalize">Reviews</h3>
-                    <div class="row">
-                        <div class="col-lg-12">
-                            {% if reviews %}
-                                <div class="list-group">
-                                    {% for review in reviews %}
-                                        <div class="list-group-item">
-                                            <div class="media">
-                                                <div class="media-left media-top">
-                                                    <img class="media-object"
-                                                         width="56"
-                                                         src="{% static 'img/default_person.png' %}">
-                                                </div>
-                                                <div class="media-body">
-                                                    <h4 class="media-heading text-primary text-capitalize">{{ review.user_name }}</h4>
-                                                    <small>{{ review.time }}</small>
-                                                    </br>
-                                                    <strong>Rating: </strong>{{ review.rating }}
-                                                </div>
-                                            </div>
-                                            <div>
-                                                <h5>{{ review.comment }}</h5>
-                                            </div>
-                                        </div>
-                                    {% endfor %}
+                    {% if reviews %}
+                        {% for review in reviews %}
+                            <div class="bs-callout bs-callout-warning">
+                                <div class="media">
+                                    <div class="media-left media-top">
+                                        <img class="media-object"
+                                             width="56"
+                                             src="{% static 'img/default_person.png' %}">
+                                    </div>
+                                    <div class="media-body">
+                                        <h4 class="media-heading text-capitalize">{{ review.user_name }}</h4>
+                                        <small>{{ review.time }}</small>
+                                        </br>
+                                        <strong>Rating: </strong>{{ review.rating }}
+                                    </div>
                                 </div>
-                            {% else %}
-                                <h4 class="text-muted"><em>No Reviews To display</em></h4>
-                            {% endif %}
-                        </div>
-                    </div>
+                                <div>
+                                    <h5>{{ review.comment }}</h5>
+                                </div>
+                            </div>
+                        {% endfor %}
+                    {% else %}
+                        <h4 class="text-muted"><em>No Reviews To display</em></h4>
+                    {% endif %}
                 </div>
             </div>
         </div>
