--- a/MovieDB/templates/movie_detail.html
+++ b/MovieDB/templates/movie_detail.html
@@ -48,7 +48,9 @@
                                     {% if avg_user_rating %}
                                         <td><h4>{{ avg_user_rating }}</h4></td>
                                     {% else %}
-                                        <td><h4 class="text-muted"><em>This movie has not yet been reviewed</em></h4></td>
+                                        <td>
+                                            <h4 class="text-muted"><em>This movie has not yet been reviewed</em></h4>
+                                        </td>
                                     {% endif %}
                                 </tr>
                                 <tr>
@@ -77,8 +79,8 @@
                             {% for director in directors %}
                                 <tr>
                                     <td>
-                                        <img class="img-circle" src="{% static 'img/default_person.png' %}" width="24">
                                         <a class="text-primary text-capitalize" href="{% url 'DirectorDetail' director.did.id %}">
+                                            <img class="img-circle" src="{% static 'img/default_person.png' %}" width="24">
                                             {{ director.did.get_full_name }}
                                         </a>
                                     </td>
@@ -99,8 +101,8 @@
                             {% for actor in actors %}
                                 <tr>
                                     <td>
-                                        <img class="img-circle" src="{% static 'img/default_person.png' %}" height="24">
                                         <a class="text-primary text-capitalize" href="{% url 'ActorDetail' actor.aid.id %}">
+                                            <img class="img-circle" src="{% static 'img/default_person.png' %}" height="24">
                                             {{ actor.aid.get_full_name }}
                                         </a>
                                     </td>
@@ -138,8 +140,19 @@
                                 </div>
                             </div>
                         {% endfor %}
+                        <div class="row" align="center">
+                            <div class="col-lg-12">
+                                <a class="btn btn-default" href="{% url 'ViewReview' movie.id %}">View More</a>
+                                <a class="btn btn-success" href="{% url 'WriteReview' movie.id %}">Write a review</a>
+                            </div>
+                        </div>
                     {% else %}
                         <h4 class="text-muted"><em>No Reviews To display</em></h4>
+                        <div class="row" align="center">
+                            <div class="col-lg-12">
+                                <a class="btn btn-success" href="{% url 'WriteReview' movie.id %}">Write a review</a>
+                            </div>
+                        </div>
                     {% endif %}
                 </div>
             </div>
