--- a/MovieDB/templates/browse_base.html
+++ b/MovieDB/templates/browse_base.html
@@ -18,6 +18,16 @@
             </div>
         </div>
 
+{#        <div class="panel panel-dark text-left">#}
+{#            <div class="panel-heading"></div>#}
+{##}
+{#            <div class="panel-body">#}
+{#                {% block paged_content %}{% endblock %}#}
+{#            </div>#}
+{##}
+{#            <div class="panel-footer"></div>#}
+{#        </div>#}
+
         {% if page.has_other_pages %}
         {% include 'browse_paginator.html' %}
         {% endif %}
