--- a/MovieDB/templates/navbar.html
+++ b/MovieDB/templates/navbar.html
@@ -1,6 +1,6 @@
 <nav id="navbar" class="navbar navbar-inverse navbar-fixed-top"
      role="navigation">
-    <div class="container-fluid">
+    <div class="container">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse">
                 <span class="sr-only">Toggle navigation</span>
